# MolMDTools

./: README.md  __init__.py  atom.py  elements.py  file_translator.py  files_translator.py  hydrogen_bond.py  main.py  molecule.py  ncil_graphs.py  pyproject.toml  xyz_trajectory.py
.github/workflows/: tests.yml
data/: elements.json
molmdtools/: __init__.py  molecule.py
molmdtools.egg-info/: SOURCES.txt
temp_wheel/molmdtools/: atom.py  calc_data_inp.py  files_translator.py  graphs.py  hydrogen_bond.py  xyz_trajectory.py
temp_wheel/molmdtools-0.1.0.dist-info/: METADATA  RECORD  top_level.txt
test_env/Scripts/: activate  activate.bat
tests/: test_4.py  test_7.py  test_atom.py  test_files_translator.py  test_molecule.py  test_xyz_traj.py  use_1.py  use_2.py  use_3.py  use_4.py  use_5.py  use_6.py  use_7.py  use_8.py  use_9.py
